made Jarred better by making ScoresFileIO simpler, and OverwriteJar more complex. ScoresFileIO simply creates a scores file, that OverwriteJar will add into the new jar.