@@ -1,193 +1,69 @@
 package MySweep;
 import java.io.BufferedReader;
-import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.StandardCopyOption;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Scanner;
-import java.util.jar.JarEntry;
-import java.util.jar.JarFile;
-import java.nio.file.FileVisitResult;
+import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
-import java.util.jar.JarInputStream;
-import java.util.jar.JarOutputStream;
-import java.util.jar.Manifest;
+import java.util.Arrays;
 
 class ScoresFileIO{
-    private static final String scoresFileName= "scores.txt";
-    private static final String scoresFromClassPath = "src/MySweep/"+scoresFileName;
-    private static final String jarName = (MineSweeper.isJarFile())?MineSweeper.getClassPath().getFileName().toString():"";
-    public ScoresFileIO(){}//<-- CONSTRUCTOR
     //----------------------------------WRITE------------------------------------------------------WRITE----------------------------------
     private static void writeLeaderboard(ScoreEntry[] allEntries){//writes from Score Entries to file or jar
         if(MineSweeper.isJarFile()){//-------------------------------------------------------IN A JAR----------------------------
-            StringBuilder jarFileScoresStringBuilder = new StringBuilder();// create string from entries
-            for(int i = 0; i < allEntries.length; i++){
-                jarFileScoresStringBuilder.append(allEntries[i].toString()).append(" ");
+            StringBuilder scoresFileString = new StringBuilder();// StringBuilder to store and create string from entries
+            for(int i = 0; i < allEntries.length; i++){//<-- for all the entries
+                scoresFileString.append(allEntries[i].toString()).append(" ");//<-- string builders have a good append function. arrays dont.
             }
-            extractJar(MineSweeper.getClassPath().toString(), MineSweeper.getTempJarPath().toString());
+            //-------------------------write string----------------------write string-------------
+            try {
+                Files.createDirectories(MineSweeper.tempPath); //<-- Create the directory.
+            } catch (IOException e) {e.printStackTrace();}
             try{
-                copyManifestToDirectory(MineSweeper.getClassPath().toString(),MineSweeper.getTempJarPath().toString());
-            }catch(IOException e){e.printStackTrace();}
-            try (FileWriter scoreWriter = new FileWriter(Paths.get(MineSweeper.getTempJarPath().toString()+"/"+scoresFromClassPath).toFile())){
-                scoreWriter.write(jarFileScoresStringBuilder.toString());//<-- overwrite the file with new contents.
+                Files.createFile(Path.of(MineSweeper.tempPath + File.separator + MineSweeper.scoresFileName));//<-- Create the file if not created.
             }catch(IOException e){
-                System.out.println(e.getClass()+" @ "+Paths.get(MineSweeper.getTempJarPath().toString()+"/"+scoresFromClassPath).toString());
-                e.printStackTrace();
+                if(!(e instanceof FileAlreadyExistsException))e.printStackTrace();
             }
-            File loaderFiles = MineSweeper.getTempPath().toFile();
-            loaderFiles.mkdirs(); 
-            createJar(MineSweeper.getTempJarPath().toString(), MineSweeper.getTempPath().toString()+File.separator+jarName);
-            try{
-                removeDirectory(MineSweeper.getTempJarPath().toString());
+            try (FileWriter out2 = new FileWriter(MineSweeper.tempPath + File.separator + MineSweeper.scoresFileName)) {//<-- filewriters can overwrite or append a string to a file
+                out2.write(scoresFileString.toString());//<-- overwrite the file with new contents, or append as specified.
             }catch(IOException e){e.printStackTrace();}
         }else{//------------------------------------this exists for IDEs------------NOT IN A JAR---------------------------
-            File scoresFile = new File(MineSweeper.class.getResource(scoresFileName).getPath().toString());
+            File scoresFile = new File(MineSweeper.class.getResource(MineSweeper.scoresFileName).getPath().toString());
             StringBuilder scoresFileString = new StringBuilder();// create string from entries
             for(int i = 0; i < allEntries.length; i++){
-              scoresFileString.append(allEntries[i].toString()).append(" ");
+                scoresFileString.append(allEntries[i].toString()).append(" ");
             }
             try (FileWriter out2 = new FileWriter(scoresFile)) {// write string
                 out2.write(scoresFileString.toString());//<-- overwrite the file with new contents.
-            }catch(IOException e){System.out.println(e.getClass()+" @ "+scoresFile.toPath().toString());e.printStackTrace();}
+            }catch(IOException e){e.printStackTrace();}
         }
-    }
-    //--------------------JAR STUFF------------HELPERS FOR WRITE----------------------------HELPERS FOR WRITE------------------------------------
-    //--------------------JAR STUFF--------------extract and create jar files------------------------------------------------
-    private static void extractJar(String jarFile, String outputDirectory) {//extracts jar to a specified directory minus the manifest
-        try (JarInputStream jis = new JarInputStream(new FileInputStream(jarFile))) {//start our jar writer
-            JarEntry entry;
-            while ((entry = jis.getNextJarEntry()) != null) {//if there is stuff
-                String entryName = entry.getName();
-                if (entry.isDirectory()){//if its a directory, call on contents
-                    File dir = new File(outputDirectory, entryName);
-                    dir.mkdirs();
-                } else {//otherwise, write it.
-                    File file = new File(outputDirectory, entryName);
-                    file.getParentFile().mkdirs();
-                    try (OutputStream os = new FileOutputStream(file)) {
-                        byte[] buffer = new byte[4096];
-                        int bytesRead;
-                        while ((bytesRead = jis.read(buffer)) != -1) {
-                            os.write(buffer, 0, bytesRead);
-                        }
-                    }
-                }
-                jis.closeEntry();//yay we're done.
-            }
-        } catch (IOException e) {e.printStackTrace();}
-    }
-    private static void copyManifestToDirectory(String jarPath, String outputDirectory) throws IOException {//copies manifest into new jar
-        File thisJarFile = new File(jarPath);
-        try(JarFile thisJar = new JarFile(thisJarFile)){
-            Manifest manifest = thisJar.getManifest();
-            if (manifest != null) {
-                File destinationDir = new File(outputDirectory + File.separator + "META-INF");
-                destinationDir.mkdirs();
-                File manifestFile = new File(destinationDir, "MANIFEST.MF");
-                Files.copy(thisJar.getInputStream(thisJar.getEntry("META-INF/MANIFEST.MF")), manifestFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-            }
-        }
-    }
-    private static void createJar(String inputDirectory, String jarFile) {//creates the jar file to add files to
-        try (JarOutputStream jos = new JarOutputStream(new FileOutputStream(jarFile))) {
-            File directory = new File(inputDirectory);
-            addFilesToJar(directory, directory.getAbsolutePath(), jos);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-    private static void addFilesToJar(File file, String root, JarOutputStream jos) throws IOException {//adds the files
-        if (file.isDirectory()) {//if it is a directory, call addfiles on the children of the directory
-            File[] files = file.listFiles();
-            if (files != null) {
-                for (File f : files) {
-                    addFilesToJar(f, root, jos);
-                }
-            }
-        } else {
-            String entryName = file.getAbsolutePath().substring(root.length() + 1).replace("\\", "/");//if windows, swap \ to /
-            JarEntry jarEntry = new JarEntry(entryName);//create new entry
-            jos.putNextEntry(jarEntry);//add new entry
-            
-            try (InputStream is = new FileInputStream(file)) {// add stuff to new entry
-                byte[] buffer = new byte[4096];
-                int bytesRead;
-                while ((bytesRead = is.read(buffer)) != -1) {
-                    jos.write(buffer, 0, bytesRead);
-                }
-            }
-            jos.closeEntry();//close to prepare next item.
-        }
-    }
-    //-------------------------remove a directory----------------------------------------------------
-    private static void removeDirectory(String directoryPath) throws IOException {//walk through and remove directory and its contents
-        Files.walkFileTree(Paths.get(directoryPath), new SimpleFileVisitor<Path>() {//This is better than recursion
-            @Override
-            public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                Files.delete(file);
-                return FileVisitResult.CONTINUE;
-            }
-
-            @Override
-            public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
-                Files.delete(dir);
-                return FileVisitResult.CONTINUE;
-            }
-        });
-    }//----------------------------------Helper for READ-------------------------Helper for READ---------------------------------------------------
-    private static String extractAJarElementToString(String jarFile, String elementName) {
-        try (JarInputStream jis = new JarInputStream(new FileInputStream(jarFile))) {
-            JarEntry entry;
-            while ((entry = jis.getNextJarEntry()) != null) {
-                String entryName = entry.getName();
-                if (!entry.isDirectory() && entryName.equals(elementName)) {
-                    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-                    byte[] buffer = new byte[4096];
-                    int bytesRead;
-                    while ((bytesRead = jis.read(buffer)) != -1) {//same as extract but to a ByteArrayOutputStream and a string instead of file
-                        baos.write(buffer, 0, bytesRead);
-                    }
-                    baos.close();
-                    return baos.toString(); // Convert the byte array to a string
-                }
-                jis.closeEntry();
-            }
-        } catch (IOException e) {e.printStackTrace();}
-        return null; // If the element is not found or an error occurs
     }
     //----------------------------functions used by other windows---------------------------------------functions used by other windows-------------
-    //---------------------------------------------------------------functions used by other windows---------------------------------------
-    //-----------------------------------READ-------------------------------------READ----------------------READ---------READ--------------------
+    //---------------------------------------------------------------functions used by other windows------------------------------------------------
+    //-----------------------------------READ-------------------------------------READ----------------------READ---------READ-----------------------
     public static ScoreEntry[] readLeaderboard(){ //reads from internal file by word to Score Entries
         ArrayList<ScoreEntry> fileEntriesBuilder = new ArrayList<>();
         ScoreEntry[] fileEntries=null;
-        if(MineSweeper.isJarFile()){//----------------------------------------------------------IN A JAR-------------------------------------------
-            if(Path.of(MineSweeper.getTempPath().toString()+File.separator+jarName).toFile().exists()){
-                String fileContents = extractAJarElementToString(MineSweeper.getTempPath().toString()+File.separator+jarName, scoresFromClassPath);
-                if(fileContents!=null){
-                    String[] words = fileContents.split("\\s+");
-                    for(String word : words){
-                        ScoreEntry currentEntry = new ScoreEntry(word);
-                        if(currentEntry.isValid())fileEntriesBuilder.add(currentEntry);//<-- only read out valid scores
-                    }
-                    fileEntries = fileEntriesBuilder.toArray(new ScoreEntry[0]);
-                }
+        if(MineSweeper.isJarFile()){//----------------------------------------------------------IN A JAR--------------------------------------------
+            if(Path.of(MineSweeper.tempPath.toString()+File.separator+MineSweeper.scoresFileName).toFile().exists()){
+                try{
+                    File scoresFile = Path.of(MineSweeper.tempPath.toString()+File.separator+MineSweeper.scoresFileName).toFile();
+                    try(Scanner in = new Scanner(scoresFile)) {
+                        while (in.hasNext()) {
+                            ScoreEntry currentEntry = new ScoreEntry(in.next());//<-- get next word (string separated by whitespace)
+                            if(currentEntry.isValid())fileEntriesBuilder.add(currentEntry);//<-- only read out valid scores
+                        }
+                        fileEntries = fileEntriesBuilder.toArray(new ScoreEntry[0]);
+                    }catch(FileNotFoundException e){e.printStackTrace();}
+                }catch(NullPointerException e){e.printStackTrace();}
             }else{
-                InputStream inputStream = ClassLoader.getSystemResourceAsStream(scoresFromClassPath);
+                InputStream inputStream = ClassLoader.getSystemResourceAsStream(MineSweeper.scoresFromClassPath);
                 InputStreamReader streamReader = new InputStreamReader(inputStream);
                 BufferedReader in = new BufferedReader(streamReader);
                 try{
@@ -204,17 +80,14 @@ class ScoresFileIO{
             return fileEntries;
         }else{//-------------------------------------------this exists for IDEs-------NOT IN A JAR------------------------------------------
             try{
-                File scoresFile = new File(MineSweeper.class.getResource(scoresFileName).getPath().toString());
+                File scoresFile = new File(MineSweeper.class.getResource(MineSweeper.scoresFileName).getPath().toString());
                 try(Scanner in = new Scanner(scoresFile)) {
                     while (in.hasNext()) {
                         ScoreEntry currentEntry = new ScoreEntry(in.next());//<-- get next word (string separated by whitespace)
                         if(currentEntry.isValid())fileEntriesBuilder.add(currentEntry);//<-- only read out valid scores
                     }
                     fileEntries = fileEntriesBuilder.toArray(new ScoreEntry[0]);
-                }catch(FileNotFoundException e){
-                    System.out.println(e.getClass()+" @ "+scoresFile.toPath().toString());
-                    e.printStackTrace();
-                }
+                }catch(FileNotFoundException e){e.printStackTrace();}
             }catch(NullPointerException e){e.printStackTrace();}
             return fileEntries;
         }
